# garden-agent

./: .gitignore  CLAUDE.md  README.md  config.yaml  deploy.sh  pyproject.toml  secrets.env.example
.github/workflows/: ci.yml
docs/: alerts.md  sensors.md  telegram.md  troubleshooting.md
garden/: __init__.py  bot.py  config.py  derived.py  ingest.py  main.py  storage.py  telegram.py
garden/agent/: __init__.py  llm.py  rules.py  runner.py  weather.py
garden/dashboard/static/: garden.css
garden/dashboard/static/css/: base.css  components.css  garden-game.css  garden-hero.css  layout.css  sky-backdrop.css  snehal-footer.css  tokens.css
garden/dashboard/static/js/: garden.js
garden/dashboard/templates/: index.html
garden/dashboard/templates/partials/: _climate-trends.html  _empty.html  _footer.html  _header.html  _hero.html  _sky-backdrop.html  _svg-sprites.html
scripts/: backup_db.sh  dev.sh  fake_post.sh  restore_db.sh  simulate.py  tg_test.sh
systemd/: ecowitt-bridge.service  garden-agent.service  garden-backup.service  garden-backup.timer  garden-cron.service  garden-cron.timer  journald-garden.conf
tests/: conftest.py  test_agronomy_accumulation.py  test_bot.py  test_config.py  test_derived.py  test_main_insights.py  test_rules.py  test_runner_cooldown.py  test_storage.py  test_telegram_envelope.py  test_telegram_webhook.py  test_weather_forecast.py
