[project]
name = "garden-agent"
version = "0.1.0"
description = "Self-hosted garden monitoring: Ecowitt ingest, SQLite storage, LLM-backed Telegram alerts"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",   # form-encoded POST parsing
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",               # Telegram + Anthropic calls
    "anthropic>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",               # TestClient
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["garden"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
